--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DOM Manipulation in JS by {Replace this with your name}</title>
     <link rel="stylesheet" href="instructorstyle.css" />
+    <link rel="stylesheet" href="mymoveshavestlye.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
       rel="stylesheet"
